--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^6.1.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-tooltip": "^3.9.0",
     "stylus": "^0.54.5"
   }
 }
